voting-app/k8s-specifications/deploy-otelcollector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-collector
  namespace: default
spec:
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector:latest
          ports:
            - containerPort: 4317
            - containerPort: 4318
          volumeMounts:
            - name: config-volume
              mountPath: /etc/otel-collector
            - name: otel-collector-pvc
              mountPath: /var/lib/otel-collector
      volumes:
        - name: config-volume
          configMap:
            name: otel-collector-config
        - name: otel-collector-pvc
          persistentVolumeClaim:
            claimName: otel-collector-pvc
