voting-app/k8s-specifications/deploy-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - image: saranrnair/election-result:v2
          name: result
          ports:
            - containerPort: 80
              name: result
      imagePullSecrets:
        - name: dockerhub
