voting-app/k8s-specifications/deploy-vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - image: saranrnair/election-vote:v3_amd
          name: vote
          ports:
            - containerPort: 80
              name: vote
      imagePullSecrets:
        - name: dockerhub
