voting-app/k8s-specifications/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - image: saranrnair/election-worker:v2
          name: worker
