voting-app/k8s-specifications/app_result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - image: saranrnair/election-result:v2
          name: result
          ports:
            - containerPort: 80
              name: result
      imagePullSecrets:
        - name: dockerhub

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
  - name: "result-service"
    port: 8081
    targetPort: 80
    # nodePort: 31001
  selector:
    app: result
