voting-app/k8s-specifications/app_vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - image: saranrnair/election-vote:latest
          name: vote
          ports:
            - containerPort: 80
              name: vote
      imagePullSecrets:
        - name: dockerhub

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
    - name: "vote-service"
      port: 8080
      targetPort: 80
      # nodePort: 31000
  selector:
    app: vote
