voting-app/k8s-specifications/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-all-in-one
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-all-in-one
  template:
    metadata:
      labels:
        app: jaeger-all-in-one
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.35
          ports:
            - containerPort: 5775  # Thrift Compact
            - containerPort: 5776  # Thrift Binary
            - containerPort: 5778  # HTTP Thrift
            - containerPort: 14250 # GRPC (Jaeger collector)
            - containerPort: 14267 # Jaeger HTTP API
            - containerPort: 14268 # Jaeger HTTP UI
            - containerPort: 6831  # UDP (Jaeger Tracing)
            - containerPort: 6832  # UDP (Jaeger Tracing)
            - containerPort: 16686 # Jaeger Query UI
            - containerPort: 9411  # Zipkin HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-all-in-one
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: grpc
      port: 5775
      targetPort: 5775
    - name: compact
      port: 5776
      targetPort: 5776
    - name: thrift-http
      port: 5778
      targetPort: 5778
    - name: jaeger-collector
      port: 14250
      targetPort: 14250
    - name: jaeger-query
      port: 16686
      targetPort: 16686
    - name: jaeger-tracing
      port: 6831
      targetPort: 6831
    - name: jaeger-tracing-udp
      port: 6832
      targetPort: 6832
    - name: zipkin
      port: 9411
      targetPort: 9411
  selector:
    app: jaeger-all-in-one
