voting-app/k8s-specifications/metrics_prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: 0   
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus"
          - "--web.console.libraries=/usr/share/prometheus/console_libraries"
          - "--web.console.templates=/usr/share/prometheus/consoles"
        ports:
        - containerPort: 9090
          name: web
        volumeMounts:
        - name: prometheus-config-vol
          mountPath: /etc/prometheus
        - name: prometheus-storage-vol
          mountPath: /prometheus
      volumes:
      - name: prometheus-config-vol
        configMap:
          name: prometheus-config
      - name: prometheus-storage-vol
        persistentVolumeClaim:
          claimName: prometheus-storage

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  ports:
    - name: web
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
  type: LoadBalancer
