voting-app/k8s-specifications/service-result.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
  - name: "result-service"
    port: 8081
    targetPort: 80
    # nodePort: 31001
  selector:
    app: result
