voting-app/k8s-specifications/service-vote.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
  - name: "vote-service"
    port: 8080
    targetPort: 80
    # nodePort: 31000
  selector:
    app: vote
