voting-app/k8s-specifications/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.23
          ports:
            - containerPort: 9411

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 9411
      targetPort: 9411
  selector:
    app: zipkin
